// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render api-ApiEndpoints correctly 1`] = `
<section
  className="mb-5 list-type1"
  name="Test"
>
  <div
    className="row"
  >
    <div
      className="col-5"
    >
      <h3
        className=""
      >
        Response
      </h3>
    </div>
    <div
      className="col-7"
    >
      <h3
        className=""
      >
        Description
      </h3>
    </div>
  </div>
  <hr />
  <div>
    <React.Fragment
      key="get-/catalogs"
    >
      <div
        className="row"
      >
        <div
          className="col-5"
        >
          get
           
          /catalogs
        </div>
        <div
          className="col-7"
        >
          The three formats are: text/turtle, application/ld+json and application/rdf+xml
        </div>
      </div>
      <hr />
    </React.Fragment>
  </div>
</section>
`;

exports[`should render api-ApiEndpoints correctly with no props 1`] = `
<section
  className="mb-5 list-type1"
  name={null}
>
  <div
    className="row"
  >
    <div
      className="col-5"
    >
      <h3
        className=""
      >
        Response
      </h3>
    </div>
    <div
      className="col-7"
    >
      <h3
        className=""
      >
        Description
      </h3>
    </div>
  </div>
  <hr />
  <div />
</section>
`;
